examples/test/testpolicy15013.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15013
  namespace: namespace278
spec:
  podSelector:
    matchLabels:
      key44: value1
      key14: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value23
      podSelector:
        matchLabels:
          key30: value9
          key25: value35
